--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header class="site-header">
             <img class="profile-pic" src="https://instagram.fhyd10-1.fna.fbcdn.net/v/t51.2885-19/s320x320/51076180_2249691108685065_2313924587181572096_n.jpg?_nc_ht=instagram.fhyd10-1.fna.fbcdn.net&_nc_ohc=Jej7fkpOqE0AX_q-s2-&oh=8b6a050857ff105f150698bcb6c0ab58&oe=5EF89972"> <!-- because flex works only on first children; .'. our image wasn't aligning in center -->
             <div class="site-header-content">
-                <h1>Hi, I am Fatima, I am 22 years old, living in Hyderabad, India.</h1>
+                <h1>Hi, I am Fatima, 22 years old and living in Hyderabad, India.</h1>
                 <h3>I am learning full stack development. Watch this space for my upcoming projects</h3>
                 <h5>If you want to learn too, join with me at <a class="course-link" href="https://www.youtube.com/watch?v=E8cl_8ktp9M&list=PLzvhQUIpvvug-c-bExl_xFcopeQi_sa29">Tanay's course.</a> </h5>
             </div>
