--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Fatima Siddiqui</title>
         <meta content="width=device-width, initial-scale=1" name="viewport">
+        <meta name="theme-color" content="#fff8dc" /> <!--Theme color is only visible in mobile-view of the website. It should match the color of the background.-->
         <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
