--- a/index.html
+++ b/index.html
@@ -7,14 +7,60 @@
         <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
+        <!-- HEADER: ABOUT ME (BIO) -->
         <header class="site-header">
-            <img class="profile-pic" src="https://instagram.fhyd10-1.fna.fbcdn.net/v/t51.2885-19/s320x320/51076180_2249691108685065_2313924587181572096_n.jpg?_nc_ht=instagram.fhyd10-1.fna.fbcdn.net&_nc_ohc=Jej7fkpOqE0AX_q-s2-&oh=8b6a050857ff105f150698bcb6c0ab58&oe=5EF89972"> <!-- because flex works only on first children; .'. our image wasn't aligning in center -->
+            <img class="profile-pic" src="img/profile-pic.jpg"> <!-- because flex works only on first children; .'. our image wasn't aligning in center -->
             <div class="site-header-content">
                 <h1>Hi, I am Fatima, 22 years old and living in Hyderabad, India.</h1>
                 <h3>I am learning full stack development. Watch this space for my upcoming projects</h3>
-                <h5>If you want to learn too, join with me at <a class="course-link" href="https://www.youtube.com/watch?v=E8cl_8ktp9M&list=PLzvhQUIpvvug-c-bExl_xFcopeQi_sa29">Tanay's course.</a> </h5>
+                <h5>If you want to learn too, join with me at <a href="https://www.youtube.com/watch?v=E8cl_8ktp9M&list=PLzvhQUIpvvug-c-bExl_xFcopeQi_sa29">Tanay's course.</a> </h5>
             </div>
         </header>
+
+        <!-- PROJECTS -->
+        <div class="container">
+            <h1 style="text-align: center; font-family: arial;">Projects</h1>
+			<div class="items">
+				<a  href="#">
+					<img class="thumbnail" src="img/employee-details.jpg">
+					<div class="caption">
+						<h2 style="color: rgb(82,82,82)">Employee ID Details</h2>
+						<p>An AngularJS web app to view, search & add new ID details of all employees.</p>
+					</div>
+				</a>
+			</div>
+			<div class="items">
+				<a href="#" >
+					<img src="img/calorie-count.jpg" alt="" class="thumbnail">
+					<div class="caption"> 													
+						<h2 style="color: rgb(82,82,82)">Calorie Counter App</h2>
+						<p>A ReactJS web app to track total calories consumed throughout the day.</p>
+					</div>
+				</a>
+			</div>
+			<div class="items">
+				<a  href="#">
+					<img class="thumbnail" src="img/expense-logger.jpg">
+					<div class="caption">
+						<h2 style="color: rgb(82,82,82)">Expenditure Logger App</h2>
+						<p>A VanillaJS web app to log everyday expenses and track total expenditure.</p>
+					</div>
+				</a>
+			</div>
+		</div>
+
+        <!-- SKILLS -->
+
+        <!-- FOOTER: CONTACT ME (SOCIAL) -->
+        <footer>
+            <p style="font-size: large; font-weight: bold;">Contact Me: <a href="mailto:fatima_siddiqui49@yahoo.com">fatima_siddiqui49@yahoo.com</a></p>
+            <!-- <hr style="background-color: rgb(82, 82, 82); height: 0.5px; border: none"/> -->
+            <p>
+              <a href="https://twitter.com/fatimamds99">Twitter</a> • 
+              <a href="https://www.linkedin.com/in/fatimamds/"> LinkedIn</a> • 
+              <a href="https://github.com/fatimamds"> GitHub </a>
+            </p>
+        </footer>
     </body>
 </html>
 
