--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             <img class="profile-pic" src="img/profile-pic.jpg"> <!-- because flex works only on first children; .'. our image wasn't aligning in center -->
             <div class="site-header-content">
                 <h1>Hi, I am Fatima, 22 years old and living in Hyderabad, India.</h1>
-                <h3>I am learning full stack development. Watch this space for my upcoming projects</h3>
-                <h5>If you want to learn too, join with me at <a href="https://www.youtube.com/watch?v=E8cl_8ktp9M&list=PLzvhQUIpvvug-c-bExl_xFcopeQi_sa29">Tanay's course.</a> </h5>
+                <!-- <h3>I am learning full stack development. Watch this space for my upcoming projects</h3> 
+                <h5>If you want to learn too, join with me at <a href="https://www.youtube.com/watch?v=E8cl_8ktp9M&list=PLzvhQUIpvvug-c-bExl_xFcopeQi_sa29">Tanay's course.</a> </h5> -->
             </div>
         </header>
 
         <!-- PROJECTS -->
         <div class="container">
-            <h1 style="text-align: center; font-family: arial;">Projects</h1>
+            <h1 style="text-align: center; font-family: arial; color: goldenrod">My Projects</h1>
 			<div class="items">
 				<a  href="#">
 					<img class="thumbnail" src="img/employee-details.jpg">
@@ -53,7 +53,7 @@
 
         <!-- FOOTER: CONTACT ME (SOCIAL) -->
         <footer>
-            <p style="font-size: large; font-weight: bold;">Contact Me: <a href="mailto:fatima_siddiqui49@yahoo.com">fatima_siddiqui49@yahoo.com</a></p>
+            <p style="font-size: large; font-weight: bold;">Contact Me: <a href="mailto:fatima.mds99@gmail.com">fatima.mds99@gmail.com</a></p>
             <!-- <hr style="background-color: rgb(82, 82, 82); height: 0.5px; border: none"/> -->
             <p>
               <a href="https://twitter.com/fatimamds99">Twitter</a> • 
