--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
         <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
+        <!-- NAVIGATION BAR -->
+        <div class="navbar">
+            <a href="index.html" class="logo">☕🍫🐈🌿🖋️</a>
+            <a href="https://fatimabits.now.sh/" class="link">Blog</a>
+        </div>
+
         <!-- HEADER: ABOUT ME (BIO) -->
         <header class="site-header">
             <img class="profile-pic" src="img/profile-pic.jpg"> <!-- because flex works only on first children; .'. our image wasn't aligning in center -->
             <div class="site-header-content">
                 <h1>Hi, I am Fatima, 22 years old and living in Hyderabad, India.</h1>
-                <!-- <h3>I am learning full stack development. Watch this space for my upcoming projects</h3> 
-                <h5>If you want to learn too, join with me at <a href="https://www.youtube.com/watch?v=E8cl_8ktp9M&list=PLzvhQUIpvvug-c-bExl_xFcopeQi_sa29">Tanay's course.</a> </h5> -->
+                <h3>I am passionate about coding and currently learning full stack development. Watch this space for my upcoming projects</h3> 
             </div>
         </header>
 
         <!-- PROJECTS -->
         <div class="container">
-            <h1 style="text-align: center; font-family: arial; color: goldenrod">My Projects</h1>
+            <h1 style="text-align: center; color: palevioletred">My Projects</h1>
 			<div class="items">
 				<a  href="#">
 					<img class="thumbnail" src="img/employee-details.jpg">
@@ -30,7 +35,7 @@
 				</a>
 			</div>
 			<div class="items">
-				<a href="#" >
+				<a href="https://mycaloriecount.vercel.app/" >
 					<img src="img/calorie-count.jpg" alt="" class="thumbnail">
 					<div class="caption"> 													
 						<h2 style="color: rgb(82,82,82)">Calorie Counter App</h2>
@@ -39,7 +44,7 @@
 				</a>
 			</div>
 			<div class="items">
-				<a  href="#">
+				<a  href="https://expenselogger.netlify.app/">
 					<img class="thumbnail" src="img/expense-logger.jpg">
 					<div class="caption">
 						<h2 style="color: rgb(82,82,82)">Expenditure Logger App</h2>
@@ -53,7 +58,7 @@
 
         <!-- FOOTER: CONTACT ME (SOCIAL) -->
         <footer>
-            <p style="font-size: large; font-weight: bold;">Contact Me: <a href="mailto:fatima.mds99@gmail.com">fatima.mds99@gmail.com</a></p>
+            <p style="font-size: large; font-weight: bold;">💌 Contact Me: <a href="mailto:fatima.mds99@gmail.com">fatima.mds99@gmail.com</a></p>
             <!-- <hr style="background-color: rgb(82, 82, 82); height: 0.5px; border: none"/> -->
             <p>
               <a href="https://twitter.com/fatimamds99">Twitter</a> • 
