--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta content="width=device-width, initial-scale=1" name="viewport">
         <meta name="theme-color" content="#fff8dc" /> <!--Theme color is only visible in mobile-view of the website. It should match the color of the background.-->
         <link href="css/main.css" rel="stylesheet">
+        <link rel="icon" href="img/icon.png">
     </head>
     <body>
         <!-- NAVIGATION BAR -->
