--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img class="profile-pic" src="img/profile-pic.jpg"> <!-- because flex works only on first children; .'. our image wasn't aligning in center -->
             <div class="site-header-content">
                 <h1>Hi, I am Fatima, 22 years old and living in Hyderabad, India.</h1>
-                <h3>I am passionate about coding and currently learning full stack development. Watch this space for my upcoming projects</h3> 
+                <h3>I am passionate about coding and currently learning full stack development. Watch this space for my upcoming projects.</h3> 
             </div>
         </header>
 
