--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="navbar">
             <a href="index.html" class="logo">☕🍫🐈🌿🖋️</a>
             <a href="https://fatimabits.now.sh/" class="link">Blog</a>
+	    <a href="https://pythoreactas.blogspot.com/" class="link">Blog</a>
         </div>
 
         <!-- HEADER: ABOUT ME (BIO) -->
