Commented old blog

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- NAVIGATION BAR -->
         <div class="navbar">
             <a href="index.html" class="logo">☕🍫🐈🌿🖋️</a>
-            <a href="https://fatimabits.now.sh/" class="link">Blog</a>
+            <!-- <a href="https://fatimabits.now.sh/" class="link">Blog</a> -->
 	    <a href="https://pythoreactas.blogspot.com/" class="link">Blog</a>
         </div>
 
