--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <!-- FOOTER: CONTACT ME (SOCIAL) -->
         <footer>
-            <p style="font-size: large; font-weight: bold;">💌 Contact Me: <a href="mailto:fatima.mds99@gmail.com">fatima.mds99@gmail.com</a></p>
+            <p style="font-size: large; font-weight: bold;">💌 Contact Me: <a href="mailto:fatima.md.siddiqui@outlook.com">fatima.md.siddiqui@outlook.com</a></p>
             <!-- <hr style="background-color: rgb(82, 82, 82); height: 0.5px; border: none"/> -->
             <p>
               <a href="https://twitter.com/fatimamds99">Twitter</a> • 
