--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <!-- NAVIGATION BAR -->
         <div class="navbar">
             <a href="index.html" class="logo">☕🍫🐈🌿🖋️</a>
-            <!-- <a href="https://fatimabits.now.sh/" class="link">Blog</a> -->
-	    <a href="https://pythoreactas.blogspot.com/" class="link">Blog</a>
+            <!-- Gatsby blog <a href="https://fatimabits.now.sh/" class="link">Blog</a> -->
+	    <a href="https://fatimamds.github.io/portal/blog/" class="link">Blog</a>
         </div>
 
         <!-- HEADER: ABOUT ME (BIO) -->
